--- a/cv_glmnet.Rmd
+++ b/cv_glmnet.Rmd
@@ -69,26 +69,12 @@ y = data_lasso$log_telomean
 # Lasso w/ CV
 
 Some built-in functions will conduct a cross-validation analysis and identify the "best" tuning parameter.
-
-```{r}
-set.seed(2)
-# n-folds is set to a default of 10 for cv.glmnet
-cv.out = cv.glmnet(x, y, alpha = 1)
-
-plot(cv.out)
-coef(cv.out)
-
-best_lambda = cv.out$lambda.min
-best_lambda
-
-```
-
 Optional arguments to `glmnet` can be useful -- in particular, `weights` can be used in the context of the adaptive lasso and `penalty.factor` can separate penalized variables from confounders. 
 
 ```{r}
+set.seed(2)
+
 is_penalized = c(rep(1, ncol(x[,1:18])), rep(0, ncol(x[,19:36])))
-
-
 
 # Use cross-validation (CV) to find best lambda value
 cv.lasso = cv.glmnet(x, y, 
@@ -133,8 +119,7 @@ lasso_beta = cbind(rownames(coef_lasso), as.vector(coef_lasso)) %>%
 ```
 
 
-#functions 
-
+#functions for looping seeds for lasso
 ```{r}
 fit_with_cv = function(seed) {
   set.seed(seed)
@@ -162,7 +147,7 @@ extract_coefs = function(fit) {
 ```
 
 
-##loop over seeds
+##loop over seeds for lasso
 ```{r}
 repeat_cv = 
   tibble(seed = 1:100) %>% 
@@ -173,11 +158,79 @@ repeat_cv =
   unnest()
   
 repeat_cv %>% 
-  ggplot(aes(x = seed, y = beta)) + geom_point() + 
-  facet_wrap(~variable)
+  ggplot(aes(x = seed, y = beta)) + geom_point(size = 0.5) + 
+  facet_wrap(~variable) +
+  ggtitle("Lasso beta values for different seeds")
 ```
 
 
 
+# Elastic Net w/ CV
 
+`glmnet` implements the elastic net -- we've set `alpha` to 1 to focus on lasso regression, but could choose `alpha` between 0 and 1. In the following, we can tune alpha and lambda simultaneously.
+
+```{r enalpha, results = "hide"}
+# For reproducibility, set a seed
+set.seed(2)
+
+# Use CV to select best alpha value
+## Create a tuning grid of alpha and lambda values
+egrid <- expand.grid(alpha = (1:10) * 0.1, 
+                     lambda = .5^(3:20))
+
+## Create a tuning control for cv
+control <- trainControl(method = "repeatedcv", 
+                        repeats = 3, 
+                        verboseIter = TRUE)
+
+## Use the tuning grid and control to find best alpha
+elnetFit <- train(x = x, 
+            y = y,
+            method = "glmnet",
+            penalty.factor = is_penalized,
+            tuneGrid = egrid,
+            trControl = control)
+plot(elnetFit)
+
+best_alpha = elnetFit$bestTune$alpha
+```
+
+For the optimal `alpha` value, we identify a best lambda and explore the results. 
+
+```{r elnet}
+elnet = glmnet(x, y, 
+               penalty.factor = is_penalized,
+               alpha = best_alpha)
+plot(elnet)
+
+
+# For reproducibility, set a seed
+set.seed(2)
+
+# Use CV to find best lambda value
+cv.elnet = cv.glmnet(x, y, 
+                     penalty.factor = is_penalized,
+                     type.measure = "mse", alpha = best_alpha)
+plot(cv.elnet)
+
+best_elambda = cv.elnet$lambda.min
+best_elambda
+
+elnet.mod = glmnet(x, y, 
+                   penalty.factor = is_penalized,
+                   alpha = best_alpha, lambda = best_elambda)
+
+coef_elnet = coef(elnet.mod)
+coef_elnet
+
+# Find the number of non-zero estimates
+length(coef_elnet[coef_elnet != 0]) # 24 non-zero estimates including the intercept
+
+# Find variables that are non-zero
+dimnames(coef_elnet)[[1]][which(coef_elnet != 0)]
+
+# Find the MSE
+elnet.pred <-  predict(elnet.mod, newx = x)
+elnet_mse <- mean((elnet.pred - y)^2)
+elnet_mse
 
