--- a/grlasso_with_wrong_grouping.Rmd
+++ b/grlasso_with_wrong_grouping.Rmd
@@ -3,6 +3,8 @@ title: "Group_lasso_wrong_grouping"
 author: "Yanelli Nunez"
 date: "10/3/2019"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -111,6 +113,8 @@ repeat_cv_group_lasso =
 ```
   
 #plot  
+
+This plot looks better (when we have the wrong grouping); the coefficients are more consistent when looping the seed
 ```{r}
 betas_grplasso <- repeat_cv_group_lasso %>%
   ggplot() + 
