Added lambda plot to elastic net and lasso. Run group lasso with single chemical groupings.

--- a/cv_grpreg_plot.Rmd
+++ b/cv_grpreg_plot.Rmd
@@ -5,6 +5,8 @@ output:
   html_document:
     toc: TRUE
     toc_float: TRUE
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
