--- a/cv_beta_plot.Rmd
+++ b/cv_beta_plot.Rmd
@@ -10,6 +10,12 @@ editor_options:
   chunk_output_type: console
 ---
 
+Note: R is version: 3.6.1
+glmnet and grpreg package are the older versions
+```{r}
+sessionInfo()
+```
+
 -If I give you seed 3 I get a full range and if I give you seed 1 I get a single point. 
 -Do group lasso with single element groupings and see if we can replicate lasso
 -what is the vector matrix structure that we suppose to use for grp lasso 
@@ -23,7 +29,7 @@ library(glmnet)
 library(grpreg)
 ```
 
-# Data Import and Cleaning 
+### Data Import and Cleaning 
 
 First, load the dataset; clean up names as needed; and convert factors to, well, factors. Next we remove missing values and reorder predictors (environmental variables first, confounders second). In keeping with standard practice, we'll ln-transform the environmental exposures and the outcome. This is the dataset we'll use to illustrate variable selection methods.
 
@@ -48,7 +54,8 @@ x = model.matrix(log_telomean ~ ., data)[,-1]
 y = data$log_telomean
 ```
 
-# Lasso w/ CV
+# Lasso 
+### Lasso w/ CV
 
 Some built-in functions will conduct a cross-validation analysis and identify the "best" tuning parameter.
 Optional arguments to `glmnet` can be useful -- in particular, `weights` can be used in the context of the adaptive lasso and `penalty.factor` can separate penalized variables from confounders. 
@@ -69,7 +76,7 @@ best_lambda
 ```
 
 
-#functions for looping seeds for lasso
+### Looping seeds for lasso for coefficients plot
 ```{r}
 fit_cv_lasso = function(seed) {
   set.seed(seed)
@@ -78,13 +85,14 @@ fit_cv_lasso = function(seed) {
                      type.measure = "mse", alpha = 1)
   
   #Find the lambda that results in the smallest CV error
-  best_lambda = cv.lasso$lambda.min
+  best_lambda <- cv.lasso$lambda.min
+ 
   
   #Fit model with cross-validated lambda
   lasso.mod = glmnet(x, y, 
                    penalty.factor = c(rep(1, ncol(x[,1:18])), rep(0, ncol(x[,19:36]))),
                    alpha = 1, lambda = best_lambda)
-  
+
 lasso.mod
 }
 
@@ -94,11 +102,7 @@ extract_coefs = function(fit) {
     rename(beta = s0) 
 }
 
-```
 
-
-## lasso beta values for different seeds
-```{r}
 repeat_cv_lasso = 
   tibble(seed = 1:100) %>% 
   mutate(
@@ -107,98 +111,95 @@ repeat_cv_lasso =
   dplyr::select(-fits) %>% 
   unnest() %>%
   rename(beta_lasso = "beta") 
-  
-```
 
-
-# Elastic Net w/ CV
-
-`glmnet` implements the elastic net -- we've set `alpha` to 1 to focus on lasso regression, but could choose `alpha` between 0 and 1. In the following, we can tune alpha and lambda simultaneously.
-
-```{r enalpha, results = "hide"}
-# For reproducibility, set a seed
-set.seed(2)
-
-# Use CV to select best alpha value
-## Create a tuning grid of alpha and lambda values
-egrid <- expand.grid(alpha = (1:10) * 0.1, 
-                     lambda = .5^(3:20))
-
-## Create a tuning control for cv
-control <- trainControl(method = "repeatedcv", 
-                        repeats = 3, 
-                        verboseIter = TRUE)
-
-## Use the tuning grid and control to find best alpha
-elnetFit <- train(x = x, 
-            y = y,
-            method = "glmnet",
-            penalty.factor = is_penalized,
-            tuneGrid = egrid,
-            trControl = control)
-plot(elnetFit)
-
-best_alpha = elnetFit$bestTune$alpha
-```
-
-For the optimal `alpha` value, we identify a best lambda and explore the results. 
-
-```{r elnet}
-set.seed(2)
-
-# Use CV to find best lambda value
-cv.elnet = cv.glmnet(x, y, 
-                     penalty.factor = is_penalized,
-                     type.measure = "mse", alpha = best_alpha)
-plot(cv.elnet)
-
-best_elambda = cv.elnet$lambda.min
-best_elambda
-
-elnet.mod = glmnet(x, y, 
-                   penalty.factor = is_penalized,
-                   alpha = best_alpha, lambda = best_elambda)
-
-coef_elnet = coef(elnet.mod)
-coef_elnet
 
 ```
 
-
-#function for looping seeds for elastic net
+### Looping seeds for lasso for lambda plot
 ```{r}
-fit_cv_elnet = function(seed) {
+
+fit_cv_lasso_2 = function(seed) {
   set.seed(seed)
-  cv.elnet = cv.glmnet(x, y, 
+  cv.lasso = cv.glmnet(x, y, 
                      penalty.factor = c(rep(1, ncol(x[,1:18])), rep(0, ncol(x[,19:36]))),
-                     type.measure = "mse", alpha = 0.1)
+                     type.measure = "mse", alpha = 1)
+
   
-  #Find the lambda that results in the smallest CV error
-  best_lambda = cv.elnet$lambda.min
+ loop_cvm    <- cv.lasso$cvm  # mean cross-validation error
+  loop_cvsd   <- cv.lasso$cvsd #std error of CV error
+  loop_lam    <- cv.lasso$lambda 
   
-  #Fit model with cross-validated lambda
-  elnet.mod = glmnet(x, y, 
-                   penalty.factor = c(rep(1, ncol(x[,1:18])), rep(0, ncol(x[,19:36]))),
-                   alpha = 0.1, lambda = best_lambda)
-  
-elnet.mod
+  dat <- cbind(lam = loop_lam, cvm = loop_cvm, cvsd = loop_cvsd) %>% 
+    as_tibble() %>% 
+    mutate(upper = cvm + 1.96*cvsd,
+         lower = cvm - 1.96*cvsd) %>% 
+    mutate(seed1 = seed)
+
 }
 
-```
-
-# Elastic net beta values for different seeds
-```{r}
-repeat_cv_elnet = 
-  tibble(seed = 1:100) %>% 
+repeat_cv_lasso_2 = 
+  tibble(seed = 1:100) %>%
   mutate(
-    fits = map(seed, ~fit_cv_elnet(seed = .x)),
-    coefs = map(fits, extract_coefs)) %>% 
-  dplyr::select(-fits) %>% 
-  unnest() %>%
-  rename(beta_elnet = "beta")
+    fits = map(seed, ~fit_cv_lasso_2(seed = .x))) %>% 
+  unnest() %>% 
+  mutate(seed = as.factor(seed))
+
+  
 ```
 
-#Group lasso
+
+# Lasso visualization
+
+#### betas
+```{r}
+repeat_cv_lasso  %>%
+  ggplot() + 
+  geom_point(aes(x = seed, y = beta_lasso), color = 'red', size = 0.5, alpha = 0.5) + 
+  facet_wrap(~variable) + 
+  geom_hline(yintercept = 0)
+
+```
+
+
+### Lambda with Error Bars
+```{r}
+repeat_cv_lasso_2 %>% 
+  ggplot(aes(x = lam, y = cvm, color = seed)) + 
+  geom_point() + 
+  geom_line() +
+  geom_errorbar(aes(ymin = lower, ymax = upper)) +
+  theme(legend.position = "none") +
+  labs(x = expression(lambda), y = "Cross-Validation Error")
+```
+
+
+### Lambda without Error Bars
+```{r}
+repeat_cv_lasso_2 %>% 
+  ggplot(aes(x = lam, y = cvm, color = seed)) + 
+  geom_point() + 
+  geom_line() +
+  theme(legend.position = "none") +
+  labs(x = expression(lambda), y = "Cross-Validation Error")
+```
+
+
+### Selected \lambda
+```{r}
+min_cv <- repeat_cv_lasso_2 %>% 
+  group_by(seed) %>% 
+  filter(cvm == min(cvm))
+
+min_cv %>% 
+  ggplot(aes(y = lam, x = seed)) + 
+  geom_point(aes(color = lam)) + 
+  theme(legend.position = "none",
+        axis.text.x = element_text(angle = 90, size = 7)) +
+  labs(x = "seed", y = expression("Cross-Validation Selected "*lambda))
+```
+
+
+# Group lasso
 
 Variable grouping for group lasso
 
@@ -222,7 +223,6 @@ group3 <- as.factor(group3)
 cbind(colnames(x), group3) #bind by columns
 
 
-
 ```
 
 
@@ -235,7 +235,7 @@ plot(cv_lasso_3)
 ```
 
 
-Functions
+### Looping for different seeds for group lasso
 ```{r}
 fit_with_cv = function(seed) {
   cv_lasso_3 <- cv.grpreg(x, y, group3, 
@@ -257,10 +257,7 @@ extract_coefs_grlasso = function(fit) {
     mutate(group3 = group3) %>% 
     filter(group3 %in% c("TEQ", "Non-Dioxin-like PCB", "Non-Ortho PCB"))
 }
-```
 
-Looping for different seeds for group lasso
-```{r}
 repeat_cv_group_lasso = 
   tibble(seed = 1:100) %>% 
   mutate(
@@ -274,55 +271,37 @@ repeat_cv_group_lasso =
 ```
 
 
-#combined data sets for plotting
+combined data sets for plotting
 ```{r}
-betas <- full_join(repeat_cv_elnet, repeat_cv_lasso, by = c("variable", "seed")) %>%
-  full_join(., repeat_cv_group_lasso, by = c("variable", "seed")) 
+#betas <- full_join(repeat_cv_elnet, repeat_cv_lasso, by = c("variable", "seed")) %>%
+ # full_join(., repeat_cv_group_lasso, by = c("variable", "seed")) 
           
 ```
                             
-#Combined plot 
-
+Combined plot 
 ```{r}
-betas_plot <- betas %>%
-  ggplot() + 
-  geom_point(aes(x = seed, y = beta_lasso, color = 'red'), size = 0.5, alpha = 0.7) + 
-  geom_point(aes(x = seed, y = beta_elnet, color = 'blue'), size = 0.5, alpha = 0.4) +
-  geom_point(aes(x = seed, y = beta_grlasso, color = 'dark green'), size = 0.5, alpha = 0.5) +
-  facet_wrap(~variable) +
-  ggtitle("Beta values for different seeds") +
-  labs(y = "beta") +
-  scale_colour_manual(name = "", 
-        values =c('blue'='blue','red'='red', 'dark green' = 'dark green'), labels = c('Elastic Net','Lasso', 'group Lasso'))
-betas_plot
+#betas_plot <- betas %>%
+ # ggplot() + 
+  #geom_point(aes(x = seed, y = beta_lasso, color = 'red'), size = 0.5, alpha = 0.7) + 
+  #geom_point(aes(x = seed, y = beta_elnet, color = 'blue'), size = 0.5, alpha = 0.4) +
+  #geom_point(aes(x = seed, y = beta_grlasso, color = 'dark green'), size = 0.5, alpha = 0.5) +
+  #facet_wrap(~variable) +
+  #ggtitle("Beta values for different seeds") +
+  #labs(y = "beta") +
+  #scale_colour_manual(name = "", 
+   #     values =c('blue'='blue','red'='red', 'dark green' = 'dark green'), labels = c('Elastic Net','Lasso', 'group Lasso'))
+#betas_plot
 ```
 
 
-#Individual plots
+### beta plot for group lasso
 ```{r}
-betas_lasso <- betas %>%
-  ggplot() + 
-  geom_point(aes(x = seed, y = beta_lasso), color = 'red', size = 0.5, alpha = 0.7) + 
-  facet_wrap(~variable)
-betas_lasso
-
-betas_elnet <- betas %>%
-  ggplot() + 
-  geom_point(aes(x = seed, y = beta_elnet), color = 'blue', size = 0.5, alpha = 0.4) + 
-  facet_wrap(~variable)
-betas_elnet
-
 #inconsistend coefficients when looping the seed
-betas_grplasso <- betas %>%
+repeat_cv_group_lasso %>%
   ggplot() + 
   geom_point(aes(x = seed, y = beta_grlasso), color = 'dark green', size = 0.5, alpha = 0.5) + 
   facet_wrap(~variable)
-betas_grplasso
+
 ```
 
-Note: R is version: 3.6.1
-glmnet and grpreg package are the older versions
-```{r}
-sessionInfo()
-```
 
