--- a/group_lasso_single_grouping.Rmd
+++ b/group_lasso_single_grouping.Rmd
@@ -2,7 +2,12 @@
 title: "group_lasso_single_groupping"
 author: "Yanelli Nunez"
 date: "10/14/2019"
-output: html_document
+output: 
+  html_document:
+    toc: TRUE
+    toc_float: TRUE
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -51,13 +56,13 @@ y = data$log_telomean
 ```
 
 
-#Group lasso
+# Group lasso
 
-Variable grouping for group lasso
+## Variable grouping for group lasso
 
 ```{r}
 group3 <- vector()
-group3[1] <- "PCB 174"
+group3[colnames(x) == "lbx074la"] <- "PCB 174"
 group3[colnames(x) == "lbx138la"] <- "PCB 138"
 group3[colnames(x) == "lbx118la"] <- "PCB 118"
 group3[colnames(x) == "lbx099la"] <- "PCB 99"
@@ -89,4 +94,89 @@ cbind(colnames(x), group3) #bind by columns
 
 ```
 
+
+## Group Lasso w/ CV
+
+As with `glmnet`, we can use CV to choose the tuning parameters. If not specified in code, ten-fold CV is the default. 
+
+We perform this analysis with the three-group model and the lasso penalty.
+
+```{r cvlasso}
+cv_single_lasso_3 <- cv.grpreg(x, y, group3, 
+                        penalty = "grLasso", seed = 1988)
+
+#plot(cv_single_lasso_3) This is giving me an error that I do not understand 
+
+cv_single_lasso_3$cve #cross-validation error
+cv_single_lasso_3$cvse #std error of CV error
+log(cv_single_lasso_3$lambda) # log(lambda)
+
+plot(desc(log(cv_single_lasso_3$lambda)), cv_single_lasso_3$cve)
+```
+
+
+## Loop Over Seeds
+
+```{r}
+fit_with_cv = function(seed) {
+  cv_lasso_loop <- cv.grpreg(x, y, group3, 
+                          penalty = "grLasso", seed = seed)
+  
+  loop_cve   <- cv_lasso_loop$cve  #cross-validation error
+  loop_cvse  <- cv_lasso_loop$cvse #std error of CV error
+  loop_lam <- cv_lasso_loop$lambda 
+  
+  dat <- cbind(lam = loop_lam, cve = loop_cve, cvse = loop_cvse) %>% 
+    as_tibble() %>% 
+    mutate(upper = cve + 1.96*cvse,
+         lower = cve - 1.96*cvse) %>% 
+    mutate(seed1 = seed)
+}
+
+repeat_cv = 
+  tibble(seed = 1:100) %>%
+  mutate(
+    fits = map(seed, ~fit_with_cv(seed = .x))) %>% 
+  unnest() %>% 
+  mutate(seed = as.factor(seed))
+```
+
+
+# Data Visualization
+
+## With Error Bars
+```{r}
+repeat_cv %>% 
+  ggplot(aes(x = lam, y = cve, color = seed)) + 
+  geom_point() + 
+  geom_line() +
+  geom_errorbar(aes(ymin = lower, ymax = upper)) +
+  theme(legend.position = "none") +
+  labs(x = expression(lambda), y = "Cross-Validation Error")
+```
+
+## Without Error Bars
+```{r}
+repeat_cv %>% 
+  ggplot(aes(x = lam, y = cve, color = seed)) + 
+  geom_point() + 
+  geom_line() +
+  theme(legend.position = "none") +
+  labs(x = expression(lambda), y = "Cross-Validation Error")
+```
+
+## Selected \lambda
+
+```{r}
+min_cv <- repeat_cv %>% 
+  group_by(seed) %>% 
+  filter(cve == min(cve))
+
+min_cv %>% 
+  ggplot(aes(y = lam, x = seed)) + 
+  geom_point(aes(color = lam)) + 
+  theme(legend.position = "none",
+        axis.text.x = element_text(angle = 90, size = 9)) +
+  labs(x = "seed", y = expression("Cross-Validation Selected "*lambda))
+```
 
