group lasso with single groups html edits

--- a/cv_beta_plot.Rmd
+++ b/cv_beta_plot.Rmd
@@ -184,7 +184,7 @@ repeat_cv_lasso_2 %>%
 ```
 
 
-### Selected \lambda
+### Selected lambda
 ```{r}
 min_cv <- repeat_cv_lasso_2 %>% 
   group_by(seed) %>% 
