--- a/cv_grpreg_plot.Rmd
+++ b/cv_grpreg_plot.Rmd
@@ -9,15 +9,21 @@ output:
 
 ```{r setup, include=FALSE}
 library(tidyverse)
-library(viridis)
 library(grpreg)
 library(janitor)
-library(glmnet)
 
 #This turns off scientific notation
 options(scipen = 999)
 
-sessionInfo()
+knitr::opts_chunk$set(
+	echo = FALSE,
+  warning = FALSE,
+  message = FALSE,
+  fig.width = 8,
+  fig.height = 6
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
 ## Data Import 
@@ -76,6 +82,18 @@ group3 <- as.factor(group3)
 cbind(colnames(x), group3) #bind by columns
 ```
 
+## Grouped Variable Selection
+
+```{r models_3}
+lasso_3 <- grpreg(x, y, group3, penalty = "grLasso")
+```
+
+Results are illustrated below. 
+
+```{r}
+plot(lasso_3)
+```
+
 ## Lasso w/ CV
 
 As with `glmnet`, we can use CV to choose the tuning parameters. If not specified in code, ten-fold CV is the default. 
@@ -83,8 +101,10 @@ As with `glmnet`, we can use CV to choose the tuning parameters. If not specifie
 We perform this analysis with the three-group model and the lasso penalty.
 
 ```{r cvlasso}
+# DOES NOT WARN
 cv_lasso_3 <- cv.grpreg(x, y, group3, 
-                        penalty = "grLasso", seed = 1988)
+                        penalty = "grLasso", seed = 1988,
+                        n.lambda = 200, max.iter = 20000)
 
 plot(cv_lasso_3)
 
@@ -133,10 +153,11 @@ lasso_beta_3 %>%
 
 ## Loop Over Seeds
 
-```{r}
+```{r, cache=TRUE}
 fit_with_cv = function(seed) {
   cv_lasso_loop <- cv.grpreg(x, y, group3, 
-                          penalty = "grLasso", seed = seed)
+                          penalty = "grLasso", seed = seed,
+                          n.lambda=200, max.iter=20000)
   
   loop_cve   <- cv_lasso_loop$cve  #cross-validation error
   loop_cvse  <- cv_lasso_loop$cvse #std error of CV error
@@ -146,38 +167,27 @@ fit_with_cv = function(seed) {
     as_tibble() %>% 
     mutate(upper = cve + 1.96*cvse,
          lower = cve - 1.96*cvse) %>% 
-    mutate(seed1 = seed)
+    mutate(seed = seed)
 }
 
 repeat_cv = 
   tibble(seed = 1:100) %>%
   mutate(
     fits = map(seed, ~fit_with_cv(seed = .x))) %>% 
-  unnest() %>% 
-  mutate(seed = as.factor(seed))
-```
-
-### Data Visualization
-
-#### With Error Bars
-```{r}
-repeat_cv %>% 
-  ggplot(aes(x = lam, y = cve, color = seed)) + 
-  geom_point() + 
-  geom_line() +
-  geom_errorbar(aes(ymin = lower, ymax = upper)) +
-  theme(legend.position = "none") +
-  labs(x = expression(lambda), y = "Cross-Validation Error")
+  unnest()
 ```
 
 #### Without Error Bars
 ```{r}
+#pdf("new_r_new_package_cv_curves.pdf")
 repeat_cv %>% 
+  mutate(seed = as.factor(seed)) %>% 
   ggplot(aes(x = lam, y = cve, color = seed)) + 
   geom_point() + 
   geom_line() +
   theme(legend.position = "none") +
   labs(x = expression(lambda), y = "Cross-Validation Error")
+#dev.off()
 ```
 
 #### Selected \lambda
@@ -187,11 +197,14 @@ min_cv <- repeat_cv %>%
   group_by(seed) %>% 
   filter(cve == min(cve))
 
+#pdf("new_r_new_package_cv_lam.pdf")
 min_cv %>% 
   ggplot(aes(y = lam, x = seed)) + 
   geom_point(aes(color = lam)) + 
   theme(legend.position = "none",
         axis.text.x = element_text(angle = 90)) +
-  labs(x = "seed", y = expression("Cross-Validation Selected "*lambda))
+  labs(x = "Seed", y = expression("Cross-Validation Selected "*lambda))
+#dev.off()
 ```
+
 
