subset_images for lasso

--- a/lasso.Rmd
+++ b/lasso.Rmd
@@ -10,11 +10,6 @@ editor_options:
   chunk_output_type: console
 ---
 
-Note: R is version: 3.6.1
-glmnet and grpreg package are the older versions
-```{r}
-sessionInfo()
-```
 
 -If I give you seed 3 I get a full range and if I give you seed 1 I get a single point. 
 -Do group lasso with single element groupings and see if we can replicate lasso
@@ -26,7 +21,13 @@ library(janitor)
 library(caret)
 library(Hmisc)
 library(glmnet)
-library(grpreg)
+#library(grpreg)
+```
+
+Note: R is version: 3.6.1
+glmnet and grpreg package are the new versions
+```{r}
+sessionInfo()
 ```
 
 ### Data Import and Cleaning 
@@ -156,7 +157,8 @@ repeat_cv_lasso  %>%
   ggplot() + 
   geom_point(aes(x = seed, y = beta_lasso), color = 'red', size = 0.5, alpha = 0.5) + 
   facet_wrap(~variable) + 
-  geom_hline(yintercept = 0)
+  geom_hline(yintercept = 0) +
+  ggtitle("1000 observations")
 
 ```
 
@@ -229,7 +231,8 @@ cbind(colnames(x), group3) #bind by columns
 This doesn't work when we have the right grouping 
 ```{r}
 cv_lasso_3 <- cv.grpreg(x, y, group3, 
-                        penalty = "grLasso", seed = 1988)
+                        penalty = "grLasso", seed = 1988,
+                        n.lambda = 200, max.iter = 20000)
 
 plot(cv_lasso_3)
 ```
@@ -239,7 +242,8 @@ plot(cv_lasso_3)
 ```{r}
 fit_with_cv = function(seed) {
   cv_lasso_3 <- cv.grpreg(x, y, group3, 
-                          penalty = "grLasso", seed = seed)
+                          penalty = "grLasso", seed = seed,
+                          n.lambda = 200, max.iter = 20000)
   
   #Find the lambda that results in the smallest CV error
   best_lasso_3 <- cv_lasso_3$lambda.min
@@ -300,7 +304,8 @@ Combined plot
 repeat_cv_group_lasso %>%
   ggplot() + 
   geom_point(aes(x = seed, y = beta_grlasso), color = 'dark green', size = 0.5, alpha = 0.5) + 
-  facet_wrap(~variable)
+  facet_wrap(~variable) +
+  geom_hline(yintercept = 0)
 
 ```
 
